--- a/chat-app/src/Components/Css/Header.css
+++ b/chat-app/src/Components/Css/Header.css
@@ -1,6 +1,6 @@
 .header {
-    background-color: #128C7E; /* WhatsApp header color */
-    color: #fff; /* Text color */
+    background-color: #128C7E; 
+    color: #fff; 
     padding: 20px;
     text-align: center;
     height: 30px;
