--- a/chat-app/src/Screens/Css/register.css
+++ b/chat-app/src/Screens/Css/register.css
@@ -70,3 +70,33 @@ h2 {
   color:blue;
   font-family: fantasy;
 }
+
+@media screen and (min-width: 320px) and (max-width: 449px) {
+  .container {
+    max-width: 270px;
+  }
+}
+
+@media screen and (min-width: 450px) and (max-width: 499px) {
+  .container {
+    max-width: 270px;
+  }
+}
+
+@media screen and (min-width: 500px) and (max-width: 767px) {
+  .container {
+    max-width: 300px;
+  }
+}
+
+@media screen and (min-width: 768px) and (max-width: 991px) {
+  .container {
+    max-width: 300px;
+  }
+}
+
+@media screen and (min-width: 992px) {
+  .container {
+    max-width: 300px;
+  }
+}
