--- a/chat-app/src/Screens/Css/chatpage.css
+++ b/chat-app/src/Screens/Css/chatpage.css
@@ -159,6 +159,19 @@
     margin-left: 20px;
     max-width: 400px;
     min-width: none;
+    box-sizing: border-box;
+    flex: 1 1 auto;
+    width: inherit;
+    min-height: 20px;
+    font-size: 15px;
+    font-weight: 400;
+    line-height: 20px;
+    outline: none;
+    will-change: width;
+    display: flex;
+    padding: 9px 12px;
+    margin: 5px 8px;
+    
   }
   
   .cf-input input {
@@ -168,26 +181,28 @@
     font-size: 16px;
     border-radius: 5px;
     border-color: #ccc;
+    
 
   }
 
   .cf-btn img{
     width: 30px;
     height: 30px;
+    padding: 9px 12px;
+    margin: 5px 8px;
    
   }
 .cf-icon img {
   width: 30px;
   height: 30px;
+  margin-left: 30px;
+  margin-top: 5px;
+  padding: 9px 12px;
+  margin: 5px 8px;
 }
 
 
-  .cf-icon img{
-    width: 30px;
-    height: 30px;
-    margin-left: 30px;
-    margin-top: 5px;
-  }
+  
 
   @media screen and (min-width: 768px) {
     .app {
